--- a/app/home/home.tpl.html
+++ b/app/home/home.tpl.html
@@ -76,4 +76,11 @@
             </ul>
         </div>
     </div>
+
+    <h2>directives</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <ps-person person="vm.dennis"></ps-person>
+        </div>
+    </div>
 </div>
