add simple directive to display a guestbook entry

--- a/app/home/home.tpl.html
+++ b/app/home/home.tpl.html
@@ -83,4 +83,11 @@
             <ps-person person="vm.dennis"></ps-person>
         </div>
     </div>
+
+    <h2>guestbook</h2>
+    <div class="row">
+        <div class="col-md-12">
+            <gb-entry entry="vm.entryExample"></gb-entry>
+        </div>
+    </div>
 </div>
