--- a/app/registration/registration.tpl.html
+++ b/app/registration/registration.tpl.html
@@ -13,6 +13,16 @@
             <label for="email-input" class="control-label">E-Mail Adresse</label>
             <input ng-pattern="*" type="text" id="email-input" class="form-control" placeholder="Ihre E-Mail Adresse?">
         </div>
+
+
+        <div class="form-group" id="gender">
+            <label for="gender-input" class="control-label">Geschlecht</label>
+            <select id="gender-input">
+                <option id="male">Männlich</option>
+                <option id="female">Weiblich</option>
+            </select>
+        </div>
+
         <div class="form-group" id="message">
             <label for="message-input" class="control-label">Nachricht</label>
             <textarea id="message-input" class="form-control">Ihre Nachricht bitte...</textarea>
