Adding: nav panel in inde Changes: remove ngRoute -> adding ui.router ->state Changes: Adding states for navigation Bug: Controller not work yet!

--- a/app/index.html
+++ b/app/index.html
@@ -14,19 +14,27 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="../content/styles/main.css">
     <!-- endbuild -->
-</head>
-<body>
-    <!--[if lt IE 10]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
-    <div ng-include="'/partials/header.html'"></div>
-    <div class="page">
-        <div class="container-fluid page-body">
-            <div ng-view></div>
-        </div>
-    </div>
-    <div ng-include="'/partials/footer.tpl.html'"></div>
+
+</head>
+<body ng-app="app">
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
+
+    <ul class="nav navbar-nav">
+        <li><a ui-sref="home">home</a></li>
+        <li><a ui-sref="about">About</a></li>
+        <li><a ui-sref="guestbook">Guestbook</a></li>
+        <li><a ui-sref="registration">Registration</a></li>
+    </ul>
+</nav>
+
+<!-- Main Container -->
+<div class="container">
+
+    <!-- Ui-Router uses ui-view instead of ng-view -->
+    <ui-view />
+</div>
 
 
     <!-- build:js scripts/vendor.js -->
