--- a/app/about/about.tpl.html
+++ b/app/about/about.tpl.html
@@ -1,3 +1,6 @@
-<div>
-    Hallo welt!!
+<h2>directives</h2>
+<div class="row">
+    <div class="col-md-12">
+        <ps-person person="vm.dennis"></ps-person>
+    </div>
 </div>
