--- a/app/home/home.tpl.html
+++ b/app/home/home.tpl.html
@@ -79,10 +79,22 @@
 
 
 
-    <h2>guestbook</h2>
+    <h2>component</h2>
     <div class="row">
         <div class="col-md-12">
+            <new-person person="vm.dennis"></new-person>
+        </div>
+    </div>
+
+    <h2>guestbook</h2>
+    <div class="row">
+        <div class="col-md-6">
             <gb-entry entry="vm.entryExample"></gb-entry>
         </div>
+
+        <div class="col-md-6">
+            <input ng-model="vm.myName" name-validator>
+        </div>
+
     </div>
 </div>
