--- a/app/index.html
+++ b/app/index.html
@@ -18,14 +18,12 @@
 
 </head>
 <body ng-app="app">
-<!-- Navigation -->
-<nav class="navbar navbar-default" role="navigation">
 
+<nav class="navbar navbar-default" role="navigation">
     <ul class="nav navbar-nav">
-        <li><a ui-sref="home">home</a></li>
-        <li><a ui-sref="about">About</a></li>
-        <li><a ui-sref="guestbook">Guestbook</a></li>
+        <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="registration">Registration</a></li>
+        <li><a ui-sref="guestbook">Gästebuch</a></li>
     </ul>
 </nav>
 
@@ -34,7 +32,10 @@
 
     <!-- Ui-Router uses ui-view instead of ng-view -->
     <ui-view />
+
 </div>
+
+<div ng-include="'/partials/footer.tpl.html'"></div>
 
 
     <!-- build:js scripts/vendor.js -->
@@ -42,8 +43,8 @@
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="../bower_components/angular-messages/angular-messages.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js scripts/plugins.js -->
