--- a/app/registration/registration.tpl.html
+++ b/app/registration/registration.tpl.html
@@ -31,9 +31,11 @@
                     <div class="row form-group">
                         <div class="col-md-12"  ng-class="{ 'has-error': myForm.alter.$invalid }">
                             <label for="alter">Alter</label>
-                            <input type="number" name="alter" id="alter" required class="form-control"
+                            <input type="number" name="alter" id="alter" min="0" max="10"  ng-pattern="integerval" class="form-control"
                                    ng-model="user.alter">
                         </div>
+                        <span ng-show="myForm.alter.$invalid"> Nur Zahlen Bitte!!!!</span>
+
                     </div>
 
                     <div class="row form-group">
