--- a/app/registration/registration.tpl.html
+++ b/app/registration/registration.tpl.html
@@ -34,7 +34,7 @@
                             <input type="number" name="alter" id="alter" min="0" max="10"  ng-pattern="integerval" class="form-control"
                                    ng-model="user.alter">
                         </div>
-                        <span ng-show="myForm.alter.$invalid"> Nur Zahlen Bitte!!!!</span>
+                        <span ng-show="myForm.alter.$invalid"> Nur Zahlen Bitte 0-10!!!!</span>
 
                     </div>
 
